--- a/macros/macros_properties.yml
+++ b/macros/macros_properties.yml
@@ -1,12 +1,12 @@
 version: 2
 
 macros:
-  - name: get_payment_type_description
+  - name: get_company_Name
     description: >
-      This macro receives a payment_type and returns the corresponding description.
+      This macro receives a hvfhs_license_num and returns the corresponding company Name.
     arguments:
-      - name: payment_type
+      - name: hvfhs_license_num
         type: int
         description: > 
-          payment_type value.
+          hvfhs_license_num value.
           Must be one of the accepted values, otherwise the macro will return null
